# acode

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
benchmarks/: bench_review_full.py  bench_review_mech.py
conventions/: javascript.json  python.json  react.json  tsx.json  typescript.json  vue.json
docs/tasks/: INDEX.md  TASK-0001-initial-implementation.md  TASK-0002-task-tracking-system.md  TASK-0003-rag-corpus-search-engine.md  TASK-0004-oss-search-engines.md  TASK-0005-metadata-wildcard-fix.md  TASK-0006-ts-ruleset-pipeline-trace.md  TASK-0007-react-cross-context-rules.md  TASK-0007-tsx-dialect-support.md  TASK-0008-optional-variant-bag-analyzer.md  TASK-0008-react-derived-and-custom-hooks.md  TASK-0009-record-key-inference-analyzer.md  TASK-0009-vue3-semantic-rules.md  TASK-0010-analyzer-gap-closing.md  TASK-0010-four-new-ts-analyzers.md  TASK-0010-react-review-performance-benchmark.md  TEMPLATE.md  (+12 more)
scripts/: export_site_data.py
site/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
tests/: conftest.py  test_adk_agent.py  test_as_const_candidate.py  test_astcore.py  test_boolean_variant_bag.py  test_constant_callsite.py  test_duplicate_literal_union.py  test_engines.py  test_mcp_server.py  test_optional_variant_bag.py  test_pipeline.py  test_rag.py  test_react_rules.py  test_recommend.py  test_record_key_inference.py  test_search_engine.py  test_strict_type_rules.py  test_stringly_literal_param.py  test_ts_conventions.py  test_ts_query_rules.py  test_tsx_dialect.py  test_vue_rules.py
(+34 files in other folders)
