[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acode"
version = "0.1.0"
description = "AST-grounded convention RAG coding agent (ADK) exposed over MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
adk = ["google-adk>=2.0"]
litellm = ["litellm>=1.60"]
langs = ["tree-sitter-go>=0.23", "tree-sitter-java>=0.23", "tree-sitter-rust>=0.23"]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[project.scripts]
acode = "acode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
